--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#ff7a00" />
   <meta name="description" content="Web site created using create-react-app" />
-  <script defer="defer" src="./design1/static/js/main.fba04de6.js"></script>
-  <link href="./design1/static/css/main.6611cac3.css" rel="stylesheet">
+  <script defer="defer" src="./static/js/main.fba04de6.js"></script>
+  <link href="./static/css/main.6611cac3.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
